--- a/.github/workflows/node.automated.test.yml
+++ b/.github/workflows/node.automated.test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        node-version: [17, 16, 14, 12]
+        node-version: [17, 16, 14]
         # os: [windows-latest]
         os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
